<resources>
    <string name="app_name">Buy It</string>
    <string name="title_activity_main">Buy It</string>
    <string name="itemviewdesc">itemViewDesc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="maps">Карта</string>
    <string name="myobjects">Мои объекты</string>
    <string name="deals">Мои сделки</string>
    <string name="rating">Рейтинг</string>
    <string name="settings">Настройки</string>

    <string name="price_value">500</string>
    <string name="service_value">50</string>
    <string name="income_value">100</string>
    <string name="profit_value">50</string>

    <string name="price">Цена</string>
    <string name="service">Обслуживание</string>
    <string name="income">Доход</string>
    <string name="profit">Прибыль</string>

    <string name="deals1">Хочу купить МГТУ им. Баумана</string>
    <string name="deals2">Обменяю Япошу на Му-му</string>

    <string name="mgtu">МГТУ им Баумана</string>
    <string name="yaposha">Япоша</string>
    <string name="spar">Spar</string>
    <string name="mc">Mc Donalds</string>
    <string name="obsh">Общежитие 10</string>

    <string name="petya">Петя Соколов</string>
    <string name="gosha">Гошка</string>
    <string name="vasya">Вася Пупкин</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_user">UserActivity</string>




    <string name="android_geo_api_key">AIzaSyA6dxz7-vh3yv6TU0ec5lILH3-7QOh1Lbk</string>
    <string name="title_activity_object">ObjectActivity</string>
    <string name="url_root">http://private-f5e37f-testapi901.apiary-mock.com/</string>


    <string name="positive_button_title">Yes</string>
    <string name="negative_button_title">No</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="places_filter_dialog_title">Filter</string>
    <string name="buy_it">Buy It</string>
    <string name="wait">Wait</string>
    <string name="request_executes">Loading</string>
    <string name="navigation_map">Map</string>
    <string name="navigation_venues">Venues</string>
    <string name="navigation_deals">Deals</string>
    <string name="navigation_rating">Rating</string>
</resources>
