<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_map"
            android:icon="@mipmap/ic_map"
            android:checked="true"
            android:title="@string/navigation_map"/>
        <item
            android:id="@+id/navigation_places"
            android:icon="@mipmap/ic_object"
            android:title="@string/navigation_venues"/>
        <item
            android:id="@+id/navigation_deals"
            android:icon="@mipmap/ic_deals"
            android:title="@string/navigation_deals"/>
        <item
            android:id="@+id/navigation_rating"
            android:icon="@mipmap/ic_raiting"
            android:title="@string/navigation_rating"/>
    </group>
</menu>