<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#10000000"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/image_view_place"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:src="@drawable/h0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignWithParentIfMissing="true"
            android:layout_toEndOf="@+id/image_view_place"
            android:layout_toRightOf="@+id/image_view_place"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/text_view_object_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="МГТУ им Баумана"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="Владелец: "
                android:id="@+id/text_view_owner_label" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="Алексей "
                android:id="@+id/text_view_owner" />
        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TableRow>

                <TextView
                    android:id="@+id/price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_view_dollar"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/currency_black_dollar" />

                <TextView
                    android:id="@+id/text_view_price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="200"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/service_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_view_dollar1"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/currency_black_dollar" />

                <TextView
                    android:id="@+id/text_view_service_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/income_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_view_dollar2"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/currency_black_dollar" />

                <TextView
                    android:id="@+id/text_view_income_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="70"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/profit_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/service_text_view"
                    android:layout_alignStart="@+id/service_text_view"
                    android:layout_below="@+id/service_text_view"
                    android:text="@string/profit"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_view_dollar3"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/currency_black_dollar" />

                <TextView
                    android:id="@+id/text_view_profit_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/text_view_service_value"
                    android:layout_alignStart="@+id/text_view_service_value"
                    android:layout_alignTop="@+id/image_view_dollar3"
                    android:text="20"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>
        </TableLayout>

        <FrameLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true" />
    </LinearLayout>

</LinearLayout>
